adding image WIFIJPG

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>I enjoy Networking, RF, Wireless, NetFlow<br />
 					<br />
 					</h1>
@@ -50,7 +50,7 @@
 								<p>My journey through OpenWRT and what it is.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/wifi.jpg" class="image fit thumb"><img src="images/thumbs/wifi.jpg" alt="" /></a>
 								<h3>Wireless Standards</h3>
 								<p>There is a lot to know...</p>
 							</article>
