--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<p>There is more to wireless than Wi-Fi</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/forgotten.jpg" alt="" /></a>
 								<h3>Command Commands</h3>
 								<p>Commands I find usefull and forget often</p>
 							</article>
@@ -70,7 +70,7 @@
 								<p>^Just trying to learn and understand. </p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/satelite.jpg" alt="" /></a>
 								<h3>Other RF stuff</h3>
 								<p>The world of Radio Frequencies</p>
 							</article>
