--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<p>There is a lot to know...</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/Mtower.jpg" alt="" /></a>
 								<h3>Going Mobile</h3>
 								<p>There is more to wireless than Wi-Fi</p>
 							</article>
@@ -65,7 +65,7 @@
 								<p>Commands I find usefull and forget often</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/digitalwave.jpg" alt="" /></a>
 								<h3>Digital Signal Process and Software Defined Radio</h3>
 								<p>^Just trying to learn and understand. </p>
 							</article>
