--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<h2>Random Things</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="pages/wifi-openwrt.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Playing with OpenWRT</h3>
 								<p>My journey through OpenWRT and what it is.</p>
 							</article>
