--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>I enjoy Networking, RF, Wireless, NetFlow<br />
+					<h1><strong>My interest include </strong>Networking, RF, Wireless, NetFlow<br />
 					<br />
 					</h1>
 				</div>
@@ -46,7 +46,7 @@
 						<h2>Random Things</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="pages/wifi-openwrt.html" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="pages/wifi-openwrt.html" class="image fit thumb"><img src="images/thumbs/01.jpg"/></a>
 								<h3>Playing with OpenWRT</h3>
 								<p>My journey through OpenWRT and what it is.</p>
 							</article>
