--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>I enjoy Networking, RF, Wireless, NetFlow<br />
+					<h1>My interest are Networking, RF, Wireless, NetFlow <br />
 					<br />
 					</h1>
 				</div>
