--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 						<div class="content">
 							<div class="inner">
 								<h1>RF-Ship</h1>
-								<p><!--[--><strong>Networking | RF | Wireless | NetFlow</strong> <!--]--><br />
+								<p><!--[--><strong>Networking | RF | 802.11 | NetFlow</strong> <!--]--><br />
 								<!--[-->Site currently being uploaded.<!--]--></p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
-								<li><a href="#work">Wirless</a></li>
-								<li><a href="#work">Openwrt</a></li>
-								<li><a href="#elements">Aircrack</a></li>
-								<li><a href="#elements">Blog</a></li>
+								<li><a href="#wireless">802.11</a></li>
+								<li><a href="#openwrt">Openwrt</a></li>
+								<li><a href="#aircrack">Aircrack</a></li>
+								<li><a href="#">Blog</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -46,23 +46,79 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I don't really like talk about myself so this page is in progress...</p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+						<!-- wireless -->
+							<article id="wireless">
+								<h2 class="major">802.11</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>802.11 Standards comming soon</p>
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="openwrt">
+								<h2 class="major">OpenWRT</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p><h3><span style="color: #cccccc;"><b>Intro: </b></span></h3>
+<p> 
+
+Openwrt: "OpenWRT is described as a Linux distribution for embedded devices."--<a href="http://www.openwrt.org/">OpenWRT</a></br>
+</br>
+
+<strong> What I am playing with:</strong> </br>
+</br>
+Linksys: WRT1200ac</br>
+Debian OS<br/>
+Using Windows? I recommend you use the OpenWRT's documentation below.</br> 
+<a href="https://wiki.openwrt.org/oldwiki/dropbearpublickeyauthenticationhowto">OpenWRT documentation for SSH-Key</a>
+</br>
+</p>
+<!--<h4><span style="color: #cccccc;"><b>Getting Started: </b></span></h4>-->
+<h4><span style="color: #cccccc;"><b>Creating SSH Key: &nbsp;</b></span></h4>
+<p> 
+
+<b>Host:</b>
+</br>
+Creating and ssh-key for the router. 
+</br>
+</br>
+<code style="margin-left: 40px">ssh-keygen -t dsa</code>
+</br>
+</br>
+Next we will use the Secure Copy command to send the ssh-key from the host to the client to the OpenWRT router. 
+</br>
+</br>
+
+<code style="margin-left: 40px">scp ~/.ssh/id_dsa.pub root@192.168.X.X:/tmp</code>
+
+</br>
+</br>
+<b>Router:</b>
+</br>
+Next we will log into the router to authorize the ssh-key
+</br>
+</br>
+<code style="margin-left: 40px">ssh root@192.168.X.X></code>
+</br>
+</br>
+Change directory to dropbear (Still understanding dropbear. I'll post more when I look into to.)
+</br>
+</br>
+<code style="margin-left: 40px">cd /etc/dropbear</code>
+</br>
+</br>
+Next we will add the ssh-key to the to the list authorized keys acceptd.
+</br>
+</br>
+<code style="margin-left: 40px">cat /tmp/id_*.pub &gt;&gt; authorized_keys</code>
+</br>
+</br>
+<code style="margin-left: 40px">chmod 0600 authorized_keys</code>
+</br>
+</br>
+<h4 span style="color: #cccccc;"><b>OpenVpn Loading.... </b></span></h4>
+</p></p>
 							</article>
 
 						<!-- Contact -->
@@ -94,244 +150,110 @@
 								</ul>
 							</article>
 
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
+						<!-- aircrack -->
+							<article id="aircrack">
+								<h2 class="major">Aircrack-NG</h2>
 
 								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
+<h3>
+<span style="color: #cccccc;"><b>Intro: </b></span></h3>
+Most, if not all the content in this page can be found on <a href="https://www.aircrack-ng.org/">Aircrack-ng's site</a> but has been organized for my (maybe our) benefit. Currently just the basics have been posted but I plan on going back as I learn and master other skills.  <br />
+Screen shots are taken from a little netbook I own that is currently running Kali 2.0 for convinces. <br />
+If I miss a step or don't show a step that you think is important, shoot me an email at rfship@gmail.com :) <br />
+<h5 style="text-align: center;">
+<span style="color: #cccccc;"><b>Getting Started: </b></span></h5>
+First we have to make sure that there are no process running that can get in the way.
+<br />
+<br />
+<code style="margin-left: 40px">
+airmon-ng check kill
+</code>
 
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
 
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="https://3.bp.blogspot.com/-sO_A6R7JSBs/WKEydUSG1rI/AAAAAAAABBM/TpIaWJ-jMe455p-1H_oIppTNFbHGZqo-ACLcB/s1600/check_kill.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" src="https://3.bp.blogspot.com/-sO_A6R7JSBs/WKEydUSG1rI/AAAAAAAABBM/TpIaWJ-jMe455p-1H_oIppTNFbHGZqo-ACLcB/s1600/check_kill.png" /></a></div>
+<br />
+<h5 style="text-align: center;">
+<span style="color: #cccccc;"><b>Monitoring: </b></span></h5>
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+Next we will put out interface into monitoring mode. Since I am using a USB adapter my interface will be <i>wlan1</i>.
+<br />
+<br />
+<code style="margin-left: 40px">
+airmon-ng start wlan1
+</code>
+<br />
 
-								<section>
-									<h3 class="major">Lists</h3>
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+<a href="https://4.bp.blogspot.com/-LywDXyCskUM/WKFSo3-1xFI/AAAAAAAABDY/eMno0u5Cp44X69mnfBbhk5ZY0wxgtg66wCLcB/s1600/airmon_start.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="81" src="https://4.bp.blogspot.com/-LywDXyCskUM/WKFSo3-1xFI/AAAAAAAABDY/eMno0u5Cp44X69mnfBbhk5ZY0wxgtg66wCLcB/s320/airmon_start.png" width="320" /></a></div>
 
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+This will put the interface into monitoring mode. creating an new interface&nbsp;<i>wlan1mon</i>. With the new interface create we can begin to monitoring near by networks.<br />
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+<br />
+<br />
+<code style="margin-left: 40px">
+airodump-ng wlan1mon
+</code>
+<br />
 
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="https://4.bp.blogspot.com/-irTIzdeE0h0/WKFSus9Xs3I/AAAAAAAABDc/Yz_pDa6WbF8InynCgiV73Qo_yNgKHZvSQCLcB/s1600/monitoring.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="120" src="https://4.bp.blogspot.com/-irTIzdeE0h0/WKFSus9Xs3I/AAAAAAAABDc/Yz_pDa6WbF8InynCgiV73Qo_yNgKHZvSQCLcB/s320/monitoring.png" width="320" /></a></div>
 
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
+<br />
+The command above with begin listening to nearby networks processing the below output. 
+<br />
+<br />
+<b>BSSID &nbsp;-</b>Mac address the Wireless Access Point<br />
+<b>ESSID &nbsp;- </b>Name of the network. Can be hidden<br />
+<b>PWR &nbsp;-</b>Signal Strength<br />
+<b>CH &nbsp;-</b>&nbsp;Channel the Access Point is operating on<br />
+<b>MB &nbsp;- </b>&nbsp;Speed or mode the device is providing (11 pure)<br />
+<b>ENC &nbsp;- </b>Encyption that is being used for the password<br />
+<b>CIPHER &nbsp;-</b>Encryption protocol that is being using<br />
+<b>AUTH &nbsp;-</b>Authentication being used to authenticate to the Access Point: PreShared Key (PSK)<br />
+<h5 style="text-align: center;">
+<b style="color: #cccccc;"><!--more--></b></h5>
+<h5 style="text-align: center;">
+<b style="color: #cccccc;">Sniffing:&nbsp;</b></h5>
+Now that we have done a little monitor and found our target we can single them out and focus just one them<br />
+<br />
+<code style="margin-left: 40px">
+airodump-ng -c *Your target's channel*  --bssid *bssid of target* -w /path/to/file --interface</code><br />
 
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button special">Special</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button special icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button special disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="demo-name">Name</label>
-											<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-										</div>
-										<div class="field half">
-											<label for="demo-email">Email</label>
-											<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-										</div>
-										<div class="field">
-											<label for="demo-category">Category</label>
-											<div class="select-wrapper">
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-										</div>
-										<div class="field half first">
-											<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-											<label for="demo-priority-low">Low</label>
-										</div>
-										<div class="field half">
-											<input type="radio" id="demo-priority-high" name="demo-priority">
-											<label for="demo-priority-high">High</label>
-										</div>
-										<div class="field half first">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
-										</div>
-										<div class="field half">
-											<input type="checkbox" id="demo-human" name="demo-human" checked>
-											<label for="demo-human">Not a robot</label>
-										</div>
-										<div class="field">
-											<label for="demo-message">Message</label>
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="special" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+</div>
+<div class="separator" style="clear: both; text-align: center;">
+<a href="https://3.bp.blogspot.com/-qXTH_-KSG_8/WKFTGX6JXdI/AAAAAAAABDk/GgXfsidzUjw_gS0HTQpTwdyI8uvN3VK5gCLcB/s1600/caputre.png" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="81" src="https://3.bp.blogspot.com/-qXTH_-KSG_8/WKFTGX6JXdI/AAAAAAAABDk/GgXfsidzUjw_gS0HTQpTwdyI8uvN3VK5gCLcB/s320/caputre.png" width="320" /></a></div>
+<br />
+Little bit of an explanation &nbsp;-c wit be your target , 6 for me. -w simply mean write to then the path and name of file you wish to write out to. Finally you have the interface you are listening on. The command will begin to capture data. When you exit or quit the command it will output four files with various information.<br />
+<br />
+<ul><ul><ul><ul>
+<li>*.cap</li>
+<li>*.csv</li>
+<li>*.kismet.csv</li>
+<li>*.kismet.netxml</li>
+</ul>
+</ul>
+</ul>
+</ul>
+<br />
+<br />
 								</section>
 
 							</article>
