--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>RF-SHIP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 							<div class="inner">
 								<h1>RF-Ship</h1>
 								<p><!--[--><strong>Networking | RF | 802.11 | NetFlow</strong> <!--]--><br />
-								<!--[-->Site currently being uploaded.<!--]--></p>
+								<!--[-->Sailing through the world of RF<!--]--></p>
 							</div>
 						</div>
 						<nav>
