--- a/index.html
+++ b/index.html
@@ -48,9 +48,30 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/satelite.jpg" alt="" /></span>
-								<p>I have a B.S. Computer Networking and CyberSecurity, but as I begin to look at the field, I fine that security is more a mindset. Today I fine myself interested in how technologies pass data between one another. Moreover I fine wireless communication of all form (802.11, bluetooth, mobile, etc.) to have my current interest. When I see an antenna on a light pull or a little dish point in so odd direction I wonder what its doing, where its going and why its there. <br/> </br>
-I have a general wonder about how things works, which can be good, but also bad as its is to run down the rabbit hole when learning about new and exciting topics. 
-</p>
+								<p>I have a B.S. Computer Networking and CyberSecurity, but as I begin to look at the field, I find that security is more a mindset. Today I fine myself interested in how technologies pass data between one another. Moreover, I fine wireless communication of all form (802.11, Bluetooth, mobile, etc.) to have my current interest. When I see an antenna on a light pull or a little dish point in so odd direction I wonder what it's doing, where it's going and wh'y its there. <br/> </br>
+I have a general wonder about how things works, which can be good, but also bad as its is to run down the rabbit hole when learning about new and exciting topics.
+ 		
+
+								<h2 class="major">Contact</h2>
+								<form method="post" action="#">
+									<div class="field half first">
+										<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
+								</div>
+								<div class="field half">
+								<label for="email">Email</label>
+								<input type="text" name="email" id="email" />
+									</div>
+								<div class="field">
+										<label for="message">Message</label>
+								<textarea name="message" id="message" rows="4"></textarea>
+									</div>
+									<ul class="actions">
+						<li><input type="submit" value="Send Message" class="special" /></li>
+									<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</form>
+							</p>
 						</article>
 					
 
@@ -112,7 +133,7 @@ Next we will add the ssh-key to the to the list authorized keys acceptd.
 </p></p>
 							</article>
 
-						<!-- Contact -->
+						<!-- Contact 
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
@@ -140,7 +161,7 @@ Next we will add the ssh-key to the to the list authorized keys acceptd.
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
+-->
 						<!-- aircrack -->
 							<article id="aircrack">
 								<h2 class="major">Aircrack-NG</h2>
