--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ I have a general wonder about how things works, which can be good, but also bad 
  		
 
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:rfship@gmail.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
