--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 I have a general wonder about how things works, which can be good, but also bad as its is to run down the rabbit hole when learning about new and exciting topics.
  		
 
-								<h2 class="major">Contact</h2>
-								<form method="post" action="mailto:rfship@gmail.com">
+<!--								<h2 class="major">Contact</h2>
+								<form method="GET" action="mailto:rfship@gmail.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
@@ -73,7 +73,7 @@ I have a general wonder about how things works, which can be good, but also bad 
 								</form>
 							</p>
 						</article>
-					
+					-->
 
 						<!-- 802.11 -->
 							<article id="wireless">
