--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 I have a general wonder about how things works, which can be good, but also bad as its is to run down the rabbit hole when learning about new and exciting topics.
  		
 
-<!--								<h2 class="major">Contact</h2>
-								<form method="GET" action="mailto:rfship@gmail.com">
+								<h2 class="major">Contact</h2>
+
+Working on the contact form...until then you'll just have to email at:
+
+<h3>rfship (at) gmail (dot) com</h3>
+<!--								<form method="GET" action="mailto:rfship@gmail.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 									<input type="text" name="name" id="name" />
