--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
 								<span class="image main"><img src="images/satelite.jpg" alt="" /></span>
 
 								
-<a href="images/resume.pdf"> <h3>Resume</h3></a>
+<!--<a href="images/resume.pdf"> <h3>Resume</h3></a>-->
 <br/>
 <p>
 I have a B.S. Computer Networking and CyberSecurity, but as I begin to look at the field, I find that security is more a mindset. Today I fine myself interested in how technologies pass data between one another. Moreover, I fine wireless communication of all form (802.11, Bluetooth, mobile, etc.) to have my current interest. When I see an antenna on a light pull or a little dish point in so odd direction I wonder what it's doing, where it's going and wh'y its there. <br/> </br>
-I have a general wonder about how things works, which can be good, but also bad as its is to run down the rabbit hole when learning about new and exciting topics.
+I have a general wonder about how things works, which can be good, but also bad as its easy to run down the rabbit hole when learning about new and exciting topics.
  		
 <br/><br/>
-I recently (2/13) got my CWA with was a nice overview of the radio frequencies and technologies.
-<br/> 
-<embed src="images/Certificate.pdf" width="600" height="500" alt="pdf" >
+I recently (2/13) got my CWA which was a nice overview of the radio frequencies and technologies.
+
+<a href="images/resume.pdf"> <h3>Certified Wireless Analyst CERT.</h3></a>
+<br/>
+
 
 
 								<h2 class="major">Contact</h2>
