--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I have a general wonder about how things works, which can be good, but also bad 
 <br/><br/>
 I recently (2/13) got my CWA which was a nice overview of the radio frequencies and technologies.
 
-<a href="images/resume.pdf"> <h3>Certified Wireless Analyst CERT.</h3></a>
+<a href="images/Certificate.pdf"> <h3>Certified Wireless Analyst CERT.</h3></a>
 <br/>
 
 
