added blog and mini post

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#protocols">Protocols</a></li>
 								<li><a href="#openwrt">Openwrt</a></li>
 								<li><a href="#aircrack">Aircrack</a></li>
-								<li><a href="#">Blog</a></li>
+								<li><a href="blog/blogmain.html">Blog</a></li>
 
 							</ul>
 						</nav>
@@ -95,7 +95,7 @@ Working on the contact form...until then you'll just have to email at:
 						<!-- 802.11 -->
 							<article id="wireless">
 								<h2 class="major">802.11 Standards</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/wifi.jpg" alt="" /></span>
 								<p>Deciding where I should start. Do I begin back a legacy or current ac even though IEEE has discontinued it. Or should I jump to the future and begin talking about AD and how its suppose to be in the 45/60 GHZ range.</p>
 							</article>
 						
@@ -103,7 +103,7 @@ Working on the contact form...until then you'll just have to email at:
 						<!-- Openwrt -->
 		d					<article id="openwrt">
 								<h2 class="major">OpenWRT</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
 								<p><h3><span style="color: #cccccc;"><b>Intro: </b></span></h3>
 <p> 
 
