--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>RF-Ship</h1>
-								<p><!--[--><strong>Networking | RF | 802.11 | NetFlow</strong> <!--]--><br />
-								<!--[-->Sailing through the world of RF<!--]--></p>
+								<p><!--[--><strong>Networking | RF | 802.11 | NetFlow</strong></p> <!--]-->
+								<p><!--[-->Sailing through the world of RF<!--]--></p>
 							</div>
 						</div>
 						<nav>
