--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Working on the contact form...until then you'll just have to email at:
 						
 
 						<!-- Openwrt -->
-		d					<article id="openwrt">
+							<article id="openwrt">
 								<h2 class="major">OpenWRT</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
 								<p><h3><span style="color: #cccccc;"><b>Intro: </b></span></h3>
