fixed some spelling in 802.11

--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@ Working on the contact form...until then you'll just have to email at:
 								<span class="image main"><img src="images/wifi.jpg" alt="" /></span>
 								<h3>intro:</h3>
 									<p>802.11 is a set of specifications for implementing local wireless networks or WLAN. The specifciations include the Medium Access Control and Physical Layer. These radio devices communicate at 2.4, 5, and new ones up to the 45/60GHz frequencies. Some you you will see use the 2.4GHz ISM band or the 5 GHz. This is largely do to the 2.4 band becoming over populated creating a lot of noise. The 5 GHz which was less used allowed for a great practice speed. However with higher carrier frequency the signal does not travel as far as the 2.4 carrier frequency. </p>
+									<p>I will add more detail to each standard however to avoid having a blank page I added overviews of each standard. </p>
 
 								<h4>Legacy:</h4>
 									<p>With a speed of 1 or 2 Mbits/s it is easy to see why bluetooth was once considered an alternative to wifi. Released in 1997, 802.11 has forward error correction code with three alternative physical layer technologies: Infradred-1Mb/s, frequency-hopping-1 or 2Mb/s, and direct-sequence- 1 or 2Mb/s.</p>
 								<h4>802.11a:</h4>
 									<p>802.11a operates at 5.8 GHz and allows transmission and reception speed of 1.5 to 54 Mb/s. Using the same data link layer protocol and frame format of the original standard, it implements OFDM waveform for its interface. Because of the high carrier frequency, 802.11a has smaller wavelengths which results in not being able to travel through walls or other objects.</p>
 									
-								<h4>802.11b</h4>
+								<h4>802.11b:</h4>
 									<p>Max speed of 11Mb/s, B is the direct extension of the modulation technique which was defined by the original 802.11 standard.</p>
 								<h4>802.11g:</h4>
 									<p>Operating in the 2.4 band with the use of the OFDM transmission scheme as the A standard. 802.11g has a max data rate of about 54Mb/s but in practices was low 20s. Designed to be backwards compatible with the b standard allow end users to not have to upgrade their network card. </p>
