--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ Working on the contact form...until then you'll just have to email at:
 				<!-- Zigbee-->
 						<h2>Zigbee</h2>
 							<p>Used as a wireless networking standard, zigbee aims to target the remote control and sensor applications. Distance can be achieved up to about 70m, however it is possible to use relay for longer distance. Using the un licenses bands 2.4HGz and 915 MHz, zigbee provides a max data rate up to 250kbps for 2.4 band and uses offset quadrature phase shift keying. 915MHz band provides a max date rate of 40kbps with a form of binary phase shift keying. Both bands use the Direct squence spread spectrum. less expensive than other wireless personal area netowrks, it is based on the IEEE 802.15.4 specifications for high level communication protocols used for PANs and only meant for small scale projects. </p>
+						<h2>WAVE (802.11p)</h2>
+							<p>WAVE is an approved amendment to the 802.11 standard, wireless access in vehicular environments, is  a vehicular communication system. It uses a 75 Mhz bandwidth in the 5.9 GHz band. </p>
 							</article>
 
 						
