about page and 404

--- a/index.html
+++ b/index.html
@@ -62,15 +62,16 @@
 
 <br/>
 <p>
-B.S. Computer Networking and CyberSecurity, but as I begin to look at the field, I find that security is more a mindset and thinking about the technology the organization is implementing. Today, I find interest in how technologies pass data between one another. Moreover, wireless communication of all form (802.11, Bluetooth, mobile, etc.) have my current interest, but I would like to expand to microwave and satelite technologies. When I see an antenna on a light pull or a little dish point in so odd direction I wonder what it's doing, where it's going and wh'y its there. <br/> </br>
-I have a general wonder about how things works, which can be good, but also bad as its easy to run down the rabbit hole when learning about new and exciting topics.
+B.S. Computer Networking and CyberSecurity:
+I have a strong interest wireless communication of all forms (wifi, Bluetooth, mobile, etc.) but I would like to expand to microwave and satelite technologies. My interest security probably started when I was watching an episode of Leverage and the charater Hardison pulled out his phone and began 'hacking' a key pad. From that moment I knew I want to go in to the computer security field but didn't know where to start. My senior year of high school I wondered how easy it would be to hack my home wifi, I soon made it my senior project. Now at the time I was wasn't really exposed to computer systems. At the most I knew that windows were business and my family had a Mac. I managed to 'hack' my wifi password with a little acer netbook in under 24 hr, which thinking about it now I dont know if thats good or really sad. (I think its sad, netbook only had a gig of ram :/ ) I found Champlain College looking for computer security degrees. I think some where while going to school I lost my interest. The school had to bring me up to date. It was 2013 and I had never touch a linux machine, I dont count mac as a unix machine.  <br/> I began to cost in college, I wasn't really sure what I was into. I was just learning the course. Of course I thought they where interesting but they did have my focus. It felt like I was being taught everything all at once, which is good. I learned networks, computer os, little bit of the forensic process and some tools. However, learning every thing can have its draw backs.</br>
+I have a general wonder about how things works, which can be good, but also bad as its easy to run down the rabbit hole when learning about new and exciting topics. It can be terrible when I want to full understand something. For example, my last semester I was take a network programming course. Off the back, I did terrible, but not because I didn't understand the material, I was learn splunk, python, powershell, ruby, and bash. Now, thats not an excuse and honestly, I had been exposed to them long be for this course, but there was something about learn 4 languages for me that was hard. I wanted to master them and I have a hard time of letting things go. I'm finished with College now but will official get my degree (5/17) and am currently working towards getting my CWNA whcih I hope to get about the same time. 
+
+<br/> I have resparked my interest in Wifi, planning on working with programs, such as Aircrack-NG, OpenWRT, and Kismet. 
  		
 <br/><br/>
-I recently (2/13) got my CWA which was a nice overview of the radio frequencies and technologies. My next goal is to obtain the CCNAW which means getting my CCNA and CCNET.
+(2/13/17) got my Certifed Wireless Analyst (CWA) from teracomm, which I honestly think was a little waste of money but the exposure to all then types and form of wireless communication was nice as well as the vocab.
 
-<a href="images/Certificate.pdf"> <h3>Certified Wireless Analyst CERT.</h3></a>
-<br/>
-
+</p>
 <h2 class="major">Contact</h2>
 
 
