wirelss tab name change

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About</a></li>
-								<li><a href="#ieee">802.11</a></li>
-								<li><a href="#protocols">Protocols</a></li>
-								<li><a href="#wireless">Wireless</a></li>
+								<li><a href="#about">    About    </a></li>
+								<li><a href="#ieee">    802.11    </a></li>
+								<li><a href="#protocols">  Protocols       </a></li>
+								<li><a href="#wireless">WirelessFundamentals</a></li>
 								<li><a href="https://rfship.wordpress.com/">Projects</a></li>
 								<!--<li><a href="blog/project.html">Projects</a></li>-->
 
@@ -177,7 +177,7 @@ I have re-sparked my interest in Wifi, planning on working with programs, such a
 
 	<p>EIRP: the hightest RF signal stregth that is transimitted from a particular antenna. </p>
 
-<h4>RFMath:</h4>
+<h4>dB:</h4>
 	
 	<h6>Watt:</h6>
 		<p>Basic unit of power, 1 watt= 1 amp of current flowing at 1 volt. A milliwatt (mW) is 1/1000 of a watt. Most 802.11 equipment trasmits between 1 and 100 mWs.</p>
