--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 						</header>
 <!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; RF-Ship . Design and Thanks go to: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">RF-Ship . Design and Thanks go to: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
